# learning-scraping

./: .gitignore  Readme.md  learn-turule.py  pyproject.toml  sudo.code
doc/: refrence.txt
src/: scrape-lnmtl-chapters.py  strip_html_tags.py
src/lnmtl/: homepage.py
