[tool.poetry]
name = "scraping"
version = "0.1.0"
description = "scraping"
authors = ["henrynoble01 <henrynoble01@gmail.com>"]

[tool.poetry.scripts]
dev = "python src/scrape-lnmtl-chapters.py"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
bs4 = "^0.0.1"
pandas = "^1.5.1"
openpyxl = "^3.0.10"

[tool.poetry.dev-dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
